--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@pinecone-database/pinecone": "0.0.12",
     "@radix-ui/react-accordion": "^1.1.1",
     "clsx": "^1.2.1",
+    "d3-dsv": "2",
     "dotenv": "^16.0.3",
     "langchain": "0.0.55",
     "lucide-react": "^0.125.0",
